force-app/main/default/objects/Team__c/fields/Conference__c.field-meta.xml
<CustomField>
    <fullName>Conference__c</fullName>
    <label>Conference</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>East</fullName>
            </value>
            <value>
                <fullName>West</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>