force-app/main/default/objects/Team__c/fields/Games__c.field-meta.xml
<CustomField>
    <fullName>Games__c</fullName>
    <label>Games</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>