force-app/main/default/objects/Team__c/fields/ServerId__c.field-meta.xml
<CustomField>
    <fullName>ServerId__c</fullName>
    <label>ServerId</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>