force-app/main/default/objects/Team__c/fields/Win__c.field-meta.xml
<CustomField>
    <fullName>Win__c</fullName>
    <label>Win</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>