force-app/main/default/objects/Team__c/fields/Win_pct__c.field-meta.xml
<CustomField>
    <fullName>Win_pct__c</fullName>
    <formula>( Win__c  *  Losses__c ) / 100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Win_pct</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>