force-app/main/default/objects/Team__c/recordTypes/Fantasy_Team.recordType-meta.xml
<RecordType>
    <fullName>Fantasy_Team</fullName>
    <active>true</active>
    <description>Fantasy NBA teams</description>
    <label>Fantasy Team</label>
</RecordType>