force-app/main/default/objects/Team__c/recordTypes/NBA_Team.recordType-meta.xml
<RecordType>
    <fullName>NBA_Team</fullName>
    <active>true</active>
    <description>Real NBA Teams</description>
    <label>NBA Team</label>
</RecordType>